[gd_scene load_steps=11 format=2]

[ext_resource path="res://Towers/LightningTower.gd" type="Script" id=1]
[ext_resource path="res://Towers/data/LightningTowerIcon.png" type="Texture" id=2]
[ext_resource path="res://Towers/data/TowerBase.png" type="Texture" id=3]
[ext_resource path="res://Towers/data/TowerColor.png" type="Texture" id=4]
[ext_resource path="res://Towers/data/TeslaCoil.png" type="Texture" id=5]
[ext_resource path="res://Towers/beams/LightningBolt.tscn" type="PackedScene" id=6]
[ext_resource path="res://Towers/data/LightningLeft.png" type="Texture" id=7]
[ext_resource path="res://Towers/data/LightningRight.png" type="Texture" id=8]
[ext_resource path="res://Sounds/LighningTowerShoot.wav" type="AudioStream" id=9]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 142.733

[node name="LightningTower" type="Node2D" index="0"]

script = ExtResource( 1 )
sight_range = 200
rot_speed = 0.1
DAMAGE = 10
COST = 20
LASER_COLOR = Color( 0.273542, 0.925781, 0.065094, 1 )
MAX_LEVEL = 3
icon = ExtResource( 2 )

[node name="tower" type="Sprite" parent="." index="0"]

scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
centered = false
offset = Vector2( -14.5, -14.5 )
_sections_unfolded = [ "Material", "Offset", "Transform", "Visibility" ]

[node name="targetting_laser" type="RayCast2D" parent="tower" index="0"]

visible = false
position = Vector2( -0.201324, -2.2769 )
enabled = false
exclude_parent = true
cast_to = Vector2( 0, -200 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="towerColor" type="Sprite" parent="tower" index="1"]

position = Vector2( 0, 3 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="turret" type="Sprite" parent="tower" index="2"]

show_behind_parent = true
position = Vector2( -0.25, -9.5 )
texture = ExtResource( 5 )
centered = false
offset = Vector2( -6.25, -29 )
_sections_unfolded = [ "Offset", "Transform", "Visibility", "Z Index" ]

[node name="LightningBolt" parent="tower/turret" index="0" instance=ExtResource( 6 )]

show_behind_parent = true
position = Vector2( 0.25, -19 )
_sections_unfolded = [ "Transform", "Visibility" ]
LASER_COLOR = Color( 1, 1, 1, 1 )

[node name="turret2" type="Sprite" parent="tower" index="3"]

visible = false
show_behind_parent = true
position = Vector2( -8, -9.5 )
texture = ExtResource( 7 )
centered = false
offset = Vector2( -2.5, -25 )
_sections_unfolded = [ "Offset", "Transform", "Visibility", "Z Index" ]

[node name="LightningBolt" parent="tower/turret2" index="0" instance=ExtResource( 6 )]

show_behind_parent = true
position = Vector2( 1.5, -15 )
_sections_unfolded = [ "Transform", "Visibility" ]
LASER_COLOR = Color( 0.509804, 0.929412, 0.964706, 1 )

[node name="turret3" type="Sprite" parent="tower" index="4"]

visible = false
show_behind_parent = true
position = Vector2( 8, -9.5 )
texture = ExtResource( 8 )
centered = false
offset = Vector2( -2.5, -25 )
_sections_unfolded = [ "Offset", "Transform", "Visibility", "Z Index" ]

[node name="LightningBolt" parent="tower/turret3" index="0" instance=ExtResource( 6 )]

show_behind_parent = true
position = Vector2( -1.5, -15 )
_sections_unfolded = [ "Transform", "Visibility" ]
LASER_COLOR = Color( 0.509804, 0.929412, 0.964706, 1 )

[node name="SensorRange" type="Area2D" parent="." index="1"]

visible = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SensorRange" index="0"]

shape = SubResource( 1 )

[node name="FireTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = true

[node name="ShootSound" type="AudioStreamPlayer2D" parent="." index="3"]

stream = ExtResource( 9 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="area_entered" from="SensorRange" to="." method="_on_SensorRange_area_entered"]

[connection signal="area_exited" from="SensorRange" to="." method="_on_SensorRange_area_exited"]

[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]


